@@ -30,6 +30,7 @@ const urlParser   = require('url');
 const assert      = require('assert');
 const moment      = require('moment');
 const GetOpt      = require('node-getopt');
+const fs          = require('fs-extra');
 
 const DEFAULT_PROTOCOL = 'http:';
 const RO_OPTION_KEY    = 'config_ro';
@@ -44,8 +45,11 @@ const optionsList = [
   ['g','timeout=SECONDS'      ,'SECONDS to wait before killing child processes'],
   ['r','references=PATH'      ,'PATH to dir containing reference repository'],
   ['n','numworkers=NUM'       ,'max NUM of workers to run'],
-  ['k','clustermaxdeaths=NUM' ,'maximum number of cluster deaths to tolerate in <clustertimeout> secs'],
+  ['k','clustermaxdeaths=NUM' ,'maximum number of worker deaths to tolerate in <clustertimeout> secs'],
   ['l','clustertimeout=SECS'  ,'see <clustermaxdeaths>'],
+  ['', 'startssl'             ,'start with ssl support'],
+  ['', 'secure_key=KEY_PATH'  ,'path to private key in pem format'],
+  ['', 'secure_cert=CERT_PATH','path to certificate in pem format'],
   ['s','skipauth'             ,'skip authorisation steps'],
   ['' ,'anyorigin'            ,'accept CORS requests from any origin'],
   ['e','emaildomain=DOMAIN'   ,'email domain to validate the remote user value against'],
@@ -61,6 +65,11 @@ const defaultOptions = {
   clustermaxdeaths: 10,
   clustertimeout:   10,
   /* end cluster */
+  /* ssl configuration */
+  secure_key:        '',
+  secure_passphrase: '',
+  secure_cert:       '',
+  /* end ssl configuration */
   originlist:       null,
   emaildomain:      null,
   proxylist:        null,
@@ -295,11 +304,35 @@ function adjustOptions(opts) {
     });
   };
 
+  let setSSL = () => {
+    let startssl = opts.get('startssl');
+    ['secure_key', 'secure_passphrase', 'secure_cert'].forEach( (optname) => {
+      if ( startssl ) {
+        if ( optname !== 'secure_passphrase' ) { // passphrase is optional
+          let path = opts.get(optname);
+          assert(path, `${optname} is required when using 'startssl' option`);
+          try {
+            fs.accessSync(path, fs.R_OK);
+          } catch (e) {
+            throw Error(
+              `Error when checking read access for file ${path} passed as option ${optname}: ${e}`
+            );
+          }
+        }
+      } else {
+        if ( opts.get(optname) ) {
+          throw new RangeError(`Unused option ${optname}`);
+        }
+      }
+    });
+  };
+
   setTempDir();
   setCluster();
   setPort();
   setACAOrigin();
   setProxies();
+  setSSL();
 }
 
 var _formatDate = () => {
