@@ -4,6 +4,7 @@ const assert       = require('assert');
 const EventEmitter = require('events');
 const fs           = require('fs-extra');
 const http         = require('http');
+const https        = require('https');
 const path         = require('path');
 const MongoClient  = require('mongodb').MongoClient;
 const util         = require('util');
@@ -57,6 +58,7 @@ require('http-shutdown').extend();
  * @requires {@link external:path|path}
  * @requires {@link external:fs-extra|fs-extra}
  * @requires {@link external:http|http}
+ * @requires {@link external:https|https}
  * @requires {@link external:mongodb|mongodb}
  * @requires {@link external:util|util}
  * @requires {@link external:http-shutdown|http-shutdown}
@@ -157,16 +159,40 @@ class ServerFactory extends EventEmitter {
   startServer() {
     LOGGER.debug('Server factory start server');
     let options = config.provide();
-    // Using withShutdown form http-shutdown
-    let server = http.createServer().withShutdown();
+
+    let server;
+
+    let startssl = options.get('startssl');
+    if ( startssl ) {
+      let key = options.get('secure_key');
+      let passphrase = options.get('secure_passphrase');
+      let cert = options.get('secure_cert');
+
+      let serverOpts = {
+        key: fs.readFileSync(key),
+        cert: fs.readFileSync(cert)
+      };
+      if ( passphrase ) {
+        serverOpts.passphrase = passphrase;
+      }
+      server = https.createServer(serverOpts);
+    } else {
+      // Using withShutdown form http-shutdown
+      server = http.createServer().withShutdown();
+    }
+
     let self = this;
 
     // Exit gracefully on a signal to quit
     [ 'SIGTERM', 'SIGINT', 'SIGHUP' ].forEach( ( sig ) => {
       process.on( sig, () => {
-        server.shutdown( () => {
-          process.exit(0);
-        });
+        if ( typeof server.shutdown === 'function' ) { // TODO check if https has it
+          server.shutdown( () => {
+            process.exit(0);
+          });
+        } else {
+          process.exit(sig);
+        }
       });
     });
     // Connect to the database and, if successful, define
