@@ -75,6 +75,7 @@
     "grunt-jsonlint": "^1.0.7",
     "grunt-browserify": "5.0.0",
     "load-grunt-tasks": "3.5.2",
+    "pem":              "1.8.3",
     "tmp": "0.0.30",
     "browserify": "13.1.1"
   }
